JP GENERATION - Contetn building - part 3

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -18,20 +18,20 @@
 <!-------------NAV MENU--------------->
 <section class="nav-background">
     <div class="topnav" id="myTopnav">
-        <a href="#logo" class="logo-jp">
+        <a class="logo-jp" href="index.html">
             <img alt="JP GENERATION logo" id="logo" src="image/asset-8-8.png">
         </a>
         <a class="icon" href="javascript:void(0);" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
-        <a href="#home">Domov</a>
+        <a href="index.html">Domov</a>
         <div class="dropdown">
             <button class="dropbtn">Portfólio
                 <i aria-hidden="true" class="fa fa-angle-down" id="arrow1"></i>
             </button>
             <div class="dropdown-content">
-                <a href="#photo">Fotky</a>
-                <a href="#video">Video</a>
+                <a href="fotky.html">Fotky</a>
+                <a href="video.html">Video</a>
             </div>
         </div>
         <div class="dropdown">
@@ -39,14 +39,14 @@
                 <i aria-hidden="true" class="fa fa-angle-down" id="arrow2"></i>
             </button>
             <div class="dropdown-content">
-                <a href="#ser-photo-prod">Foto produkcia</a>
-                <a href="#ser-video-prod">Video produkcia</a>
-                <a href="#ser-graph-des">Graficky dizajn</a>
-                <a href="#ser-news-lett">Newsletter reklama</a>
-                <a href="#ser-admin-dom-hos">Správa domeny a hostingu</a>
-                <a href="#ser-word-web">Wordpres web</a>
-                <a href="#ser-soc-med">Sociálne média</a>
-                <a href="#ser-dig-stra">Digitálna stratégia</a>
+                <a href="ser-photo-prod.html">Foto produkcia</a>
+                <a href="ser-video-prod.html">Video produkcia</a>
+                <a href="ser-graph-des.html">Graficky dizajn</a>
+                <a href="ser-news-lett.html">Newsletter reklama</a>
+                <a href="ser-admin-dom-hos.html">Správa domeny a hostingu</a>
+                <a href="ser-word-web.html">Wordpres web</a>
+                <a href="ser-soc-med.html">Sociálne média</a>
+                <a href="ser-dig-stra.html">Digitálna stratégia</a>
             </div>
         </div>
         <div class="dropdown">
@@ -54,14 +54,14 @@
                 <i aria-hidden="true" class="fa fa-angle-down" id="arrow3"></i>
             </button>
             <div class="dropdown-content">
-                <a href="#price-photo-prod">Foto produkcia</a>
-                <a href="#price-video-prod">Video produkcia</a>
-                <a href="#price-graph-des">Graficky dizajn</a>
-                <a href="#price-news-lett">Newsletter reklama</a>
-                <a href="#price-admin-dom-hos">Správa domeny a hostingu</a>
-                <a href="#price-word-web">Wordpres web</a>
-                <a href="#price-soc-med">Sociálne média</a>
-                <a href="#price-dig-stra">Digitálna stratégia</a>
+                <a href="price-photo-prod.html">Foto produkcia</a>
+                <a href="price-video-prod.html">Video produkcia</a>
+                <a href="price-graph-des.html">Graficky dizajn</a>
+                <a href="price-news-lett.html">Newsletter reklama</a>
+                <a href="price-admin-dom-hos.html">Správa domeny a hostingu</a>
+                <a href="price-word-web.html">Wordpres web</a>
+                <a href="price-soc-med.html">Sociálne média</a>
+                <a href="price-dig-stra.html">Digitálna stratégia</a>
             </div>
         </div>
         <div class="dropdown">
@@ -69,11 +69,11 @@
                 <i aria-hidden="true" class="fa fa-angle-down" id="arrow4"></i>
             </button>
             <div class="dropdown-content">
-                <a href="#about-us">Kto vlastne sme</a>
-                <a href="#customers">Zákaznici</a>
+                <a href="about-us.html">Kto vlastne sme</a>
+                <a href="customers.html">Zákaznici</a>
             </div>
         </div>
-        <a href="#contact">Kontakt</a>
+        <a href="contact.html">Kontakt</a>
     </div>
 </section>
 <!-------------PHOTO SLIDER--------------->
