JP GENERATION - Complet section services

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -9,10 +9,9 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/media.css" rel="stylesheet">
     <link href="css/keyframe.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,400&display=swap"
-          rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 <!-------------NAV MENU--------------->
@@ -198,38 +197,40 @@
     </div>
     <section class="content1">
             <div class="white">
-                <i aria-hidden="true" class="fa fa-camera"></i>
+                <i aria-hidden="true" class="fa fa-camera" id="ser-icon1"></i>
                 <h3>Foto produkcia</h3>
-               <!-- <p>Profesionálne fotografie pre Váš e-shop, sociálne siete alebo udalosť na ktorú nechcete zabudnúť…</p>-->
+                <p class="con-p">Profesionálne fotografie pre Váš e-shop, sociálne siete alebo udalosť na ktorú nechcete zabudnúť…</p>
             </div>
             <div id="turquise">
-                <i aria-hidden="true" class="fa fa-video-camera"></i>
+                <i aria-hidden="true" class="fa fa-video-camera" id="ser-icon2"></i>
                 <h3 class="turquise-bl">Video produkcia</h3>
-                <!--<p>Využívali ste do teraz len free mobilne aplikácie pre Vašú tvorbu? A po nahraní sa Vám zdalo že už to
-                    nieje ono? Spracujeme Vám video na ktoré budete vedieť pozerať dookola…</p>-->
+                <p class="con-p-black">Využívali ste do teraz len free mobilne aplikácie pre Vašú tvorbu? A po nahraní sa Vám zdalo že už to
+                    nieje ono? Spracujeme Vám video na ktoré budete vedieť pozerať dookola…</p>
             </div>
             <div class="white">
-                <i aria-hidden="true" class="fa fa-pencil-square-o"></i>
+                <i aria-hidden="true" class="fa fa-pencil-square-o" id="ser-icon3"></i>
                 <h3>Graficky dizajn</h3>
-                <!--<p>Banner, logo, plagát, vizitka, vizualizácia…
-                    Všetko čo Vám napadne pod slovo graficky dizajn…</p>-->
+                <p class="con-p">Banner, logo, plagát, vizitka, vizualizácia…
+                    Všetko čo Vám napadne pod slovo graficky dizajn…</p>
             </div>
     </section>
     <section class="content2">
         <div>
-            <i aria-hidden="true" class="fa fa-wordpress"></i>
+            <i aria-hidden="true" class="fa fa-wordpress" id="ser-icon4"></i>
             <h3>WordPress web</h3>
-           <!-- <p>Vytvoríme Vám web na mieru bez starostí od blogu až po e-shop… </p>-->
+            <span class="spacer"></span>
+            <p class="con-p">Vytvoríme Vám web na mieru bez starostí od blogu až po e-shop… </p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-server"></i>
+            <i aria-hidden="true" class="fa fa-server" id="ser-icon5"></i>
             <h3>Správa domeny a hostingu</h3>
-            <!--<p>Zaberá Vám správa Vášho e-shopu veľa času? Nechatje to na Nás…</p>-->
+            <p class="con-p">Zaberá Vám správa Vášho e-shopu veľa času? Nechatje to na Nás…</p>
         </div>
         <div>
-            <i class="fa fa-line-chart" aria-hidden="true"></i>
+            <i class="fa fa-line-chart" aria-hidden="true" id="ser-icon6"></i>
             <h3>Digitálna stratégia</h3>
-            <!--<p>Každá dobra stratégia potrebuje analýzu ktorú Vám poskytneme…</p>-->
+            <span class="spacer"></span>
+            <p class="con-p">Každá dobra stratégia potrebuje analýzu ktorú Vám poskytneme…</p>
         </div>
     </section>
 </section>
