JP GENERATION - LOGO nav bar fix

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -16,63 +16,67 @@
 <body>
 <!-------------NAV MENU--------------->
 <section class="nav-background">
-    <div class="topnav" id="myTopnav">
-        <a class="logo-jp" href="index.html">
-            <img alt="JP GENERATION logo" id="logo" src="image/asset-8-8.png">
-        </a>
-        <a class="icon" href="javascript:void(0);" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
-        </a>
-        <a href="index.html">Domov</a>
-        <div class="dropdown">
-            <button class="dropbtn">Portfólio
-                <i aria-hidden="true" class="fa fa-angle-down" id="arrow1"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="fotky.html">Fotky</a>
-                <a href="video.html">Video</a>
-            </div>
+    <div class="nav-complet">
+        <div class="log-div">
+            <a class="logo-jp" href="index.html">
+                <img alt="JP GENERATION logo" id="logo" src="image/asset-8-8.png">
+            </a>
         </div>
-        <div class="dropdown">
-            <button class="dropbtn">Služby
-                <i aria-hidden="true" class="fa fa-angle-down" id="arrow2"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="ser-photo-prod.html">Foto produkcia</a>
-                <a href="ser-video-prod.html">Video produkcia</a>
-                <a href="ser-graph-des.html">Graficky dizajn</a>
-                <a href="ser-news-lett.html">Newsletter reklama</a>
-                <a href="ser-admin-dom-hos.html">Správa domeny a hostingu</a>
-                <a href="ser-word-web.html">Wordpres web</a>
-                <a href="ser-soc-med.html">Sociálne média</a>
-                <a href="ser-dig-stra.html">Digitálna stratégia</a>
+        <div class="topnav" id="myTopnav">
+            <a class="icon" href="javascript:void(0);" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
+            <a href="index.html">Domov</a>
+            <div class="dropdown">
+                <button class="dropbtn">Portfólio
+                    <i aria-hidden="true" class="fa fa-angle-down" id="arrow1"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="fotky.html">Fotky</a>
+                    <a href="video.html">Video</a>
+                </div>
             </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn">Cenník
-                <i aria-hidden="true" class="fa fa-angle-down" id="arrow3"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="price-photo-prod.html">Foto produkcia</a>
-                <a href="price-video-prod.html">Video produkcia</a>
-                <a href="price-graph-des.html">Graficky dizajn</a>
-                <a href="price-news-lett.html">Newsletter reklama</a>
-                <a href="price-admin-dom-hos.html">Správa domeny a hostingu</a>
-                <a href="price-word-web.html">Wordpres web</a>
-                <a href="price-soc-med.html">Sociálne média</a>
-                <a href="price-dig-stra.html">Digitálna stratégia</a>
+            <div class="dropdown">
+                <button class="dropbtn">Služby
+                    <i aria-hidden="true" class="fa fa-angle-down" id="arrow2"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="ser-photo-prod.html">Foto produkcia</a>
+                    <a href="ser-video-prod.html">Video produkcia</a>
+                    <a href="ser-graph-des.html">Graficky dizajn</a>
+                    <a href="ser-news-lett.html">Newsletter reklama</a>
+                    <a href="ser-admin-dom-hos.html">Správa domeny a hostingu</a>
+                    <a href="ser-word-web.html">Wordpres web</a>
+                    <a href="ser-soc-med.html">Sociálne média</a>
+                    <a href="ser-dig-stra.html">Digitálna stratégia</a>
+                </div>
             </div>
-        </div>
-        <div class="dropdown">
-            <button class="dropbtn">O nás
-                <i aria-hidden="true" class="fa fa-angle-down" id="arrow4"></i>
-            </button>
-            <div class="dropdown-content">
-                <a href="about-us.html">Kto vlastne sme</a>
-                <a href="customers.html">Zákaznici</a>
+            <div class="dropdown">
+                <button class="dropbtn">Cenník
+                    <i aria-hidden="true" class="fa fa-angle-down" id="arrow3"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="price-photo-prod.html">Foto produkcia</a>
+                    <a href="price-video-prod.html">Video produkcia</a>
+                    <a href="price-graph-des.html">Graficky dizajn</a>
+                    <a href="price-news-lett.html">Newsletter reklama</a>
+                    <a href="price-admin-dom-hos.html">Správa domeny a hostingu</a>
+                    <a href="price-word-web.html">Wordpres web</a>
+                    <a href="price-soc-med.html">Sociálne média</a>
+                    <a href="price-dig-stra.html">Digitálna stratégia</a>
+                </div>
             </div>
+            <div class="dropdown">
+                <button class="dropbtn">O nás
+                    <i aria-hidden="true" class="fa fa-angle-down" id="arrow4"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="about-us.html">Kto vlastne sme</a>
+                    <a href="customers.html">Zákaznici</a>
+                </div>
+            </div>
+            <a href="contact.html">Kontakt</a>
         </div>
-        <a href="contact.html">Kontakt</a>
     </div>
 </section>
 <!-------------PHOTO SLIDER--------------->
