JP GENERATION - New buttom + social media build on footer

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -82,59 +82,43 @@
 <!-------------PHOTO SLIDER--------------->
 <section class="slider">
     <div class="slideshow-container">
+        <div class="text">Kreatívna myseľ, kreatívna praca.</div>
+        <div class="text2">My sme digitálna generácia</div>
         <!-----------1.-------->
         <div class="mySlides">
             <img alt="ENCORE the club negroni cocktail" class="sliderimg" src="image/jp-negroni.webp">
-            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
-            <div class="text2">My sme digitálna generácia</div>
         </div>
         <!-----------2.-------->
         <div class="mySlides">
             <img alt="Chivas Regal 15yo and cigar" class="sliderimg" src="image/chivaspromo-portfoli.webp">
-            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
-            <div class="text2">My sme digitálna generácia</div>
         </div>
         <!-----------3.-------->
         <div class="mySlides">
             <img alt="halloween shot cocktail" class="sliderimg" src="image/jp-halloween-portfoli-shot.webp">
-            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
-            <div class="text2">My sme digitálna generácia</div>
         </div>
         <!-----------4.-------->
         <div class="mySlides">
             <img alt="halloween martini cocktail" class="sliderimg" src="image/halloween-portfoli.webp">
-            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
-            <div class="text2">My sme digitálna generácia</div>
         </div>
         <!-----------5.-------->
         <div class="mySlides">
             <img alt="G&T Malfy cocktail mennu" class="sliderimg" src="image/jp-menu-portfoli-malfy.webp">
-            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
-            <div class="text2">My sme digitálna generácia</div>
         </div>
         <!-----------6.-------->
         <div class="mySlides">
             <img alt="ENCORE the club cocktail card" class="sliderimg" src="image/jp-graphic.webp">
-            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
-            <div class="text2">My sme digitálna generácia</div>
         </div>
         <!-----------7.-------->
         <div class="mySlides">
             <img alt="Lounge bar peoples" class="sliderimg" src="image/jp-people.webp">
-            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
-            <div class="text2">My sme digitálna generácia</div>
         </div>
         <!-----------8.-------->
         <div class="mySlides">
             <img alt="Coktail menu QR code design" class="sliderimg" src="image/jp-qrcode.webp">
-            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
-            <div class="text2">My sme digitálna generácia</div>
         </div>
         <!-----------9.-------->
         <div class="mySlides">
             <img alt="KVADRAT sushi in lounge bar" class="sliderimg" src="image/jp-shushi.webp">
-            <div class="text">Kreatívna myseľ, kreatívna praca.</div>
-            <div class="text2">My sme digitálna generácia</div>
         </div>
     </div>
     <br>
@@ -160,6 +144,17 @@
     </div>
 </section>
 <br>
+<section class="new-gen">
+    <div class="wrapper">
+        <a class="button-gen" href="contact.html">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Začať novú generáciu
+        </a>
+    </div>
+</section>
 <br>
 <!-------------IDEA OF THE COMAPNY--------------->
 <section class="concept">
@@ -414,27 +409,54 @@
         </div>
     </section>
     <section class="soc-icon">
-        <div>
-            <div class="instagram">
-                <a href="#">
-                    <i aria-hidden="true" class="fa fa-instagram"></i>
+        <div class="soc-an">
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/jaro.potocny">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span class="fa fa-facebook"></span>
                 </a>
-            </div>
-            <div class="facebook">
-                <a href="#">
-                    <i aria-hidden="true" class="fa fa-facebook-square"></i>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/jaro_potocny/">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span class="fa fa-instagram"></span>
                 </a>
-            </div>
-            <div class="youtube">
-                <a href="#">
-                    <i aria-hidden="true" class="fa fa-youtube-play"></i>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/@jpgeneration/featured">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span class="fa fa-youtube-play"></span>
                 </a>
-            </div>
-            <div class="e-mail">
-                <a href="#">
-                    <i aria-hidden="true" class="fa fa-envelope-o"></i>
+            </li>
+            <li>
+                <a href="tel:0907112358">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span class="fa fa-phone-square"></span>
                 </a>
-            </div>
+            </li>
+            <li>
+            <a href="mailto:jaroslavpotocny@icloud.com">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                <span class="fa fa-envelope-o"></span>
+            </a>
+            </li>
+        </ul>
         </div>
     </section>
     <section class="copy-write">
