JP GENERATION - START PROGRES BAR

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -240,18 +240,16 @@
 <br>
 <!-------------PROJECT-------------->
 <section class="project">
-    <header class="headline">
-        <div>
-            <div class="line"></div>
-            <div>
-                <h2>Projekty</h2>
-            </div>
+    <header class="headline-con">
+        <div class="con-main">
+            <div class="line-con1"></div>
             <div class="spacer"></div>
         </div>
-        <div>
-            <span>MENŠÍ NÁHĽAD AKO MÔŽE VYZERAŤ AJ VÁŠ PROJEKT</span>
-        </div>
+        <h2>Projekty</h2>
     </header>
+    <div class="con-look">
+        <span>Menší náhľad ako môže vyzerať aj Váš projekt</span>
+    </div>
     <section class="photo-galery">
         <div class="pro-img-1">
             <img alt="" src="">
@@ -278,15 +276,16 @@
 <!-------------SKILL LIST-------------->
 <section class="abilites">
     <div class="skills">
-        <header class="headline">
-            <div>
-                <h2>Tu su nejaké naše zručnosti</h2>
+        <header class="headline-con">
+            <div class="con-main">
+                <div class="spacer"></div>
             </div>
-            <div>
-                <p>Nikto nieje dokonalý preto Vás nebudeme klamať že všetko ovladáme na 100%. Vždy sa da niečo nové
-                    naučiť a ak si myslíte nie znamená to len jedno…</p>
-            </div>
+            <h2 class="skills">Tu su nejaké naše zručnosti</h2>
         </header>
+        <div class="skill-text">
+            Nikto nieje dokonalý preto Vás nebudeme klamať že všetko ovladáme na 100%. Vždy sa da niečo nové
+                naučiť a ak si myslíte nie znamená to len jedno…
+        </div>
         <section class="skill-list">
             <div class="name1">
                 <div class="type"><span>Foto produkcia</span></div>
@@ -338,6 +337,7 @@
 </section>
 <br>
 <br>
+<!-------------FOOTER-------------->
 <footer>
     <section class="main">
         <div class="fot-logo-disc">
@@ -408,9 +408,10 @@
     </section>
     <section class="spacer">
         <div class="line">
-            <!--PRITAĎ ČIATU !!!-->
+            <!--PRITAĎ ČIARU !!!-->
         </div>
     </section>
+    <!-------------SOCIAL ICON------------->
     <section class="soc-icon">
         <div class="soc-an">
             <ul>
@@ -462,6 +463,7 @@
             </ul>
         </div>
     </section>
+    <!-------------COPYRIGHT-------------->
     <section class="copy-write">
         <div>
             <p>Copyright © 2023. All rights reserved.</p>
@@ -478,34 +480,20 @@
 </html>
 
 <!-------------TO DO-------------->
-<!--TODO slide left full width menu-->
 <!--TODO animacia navigacneho menu na X-->
 <!--TODO Equal width menu-->
-<!--TODO Clik droplist menu in nav an in slide bar -->
-<!--TODO Mobile menu logo -->
-<!--TODO slider na header fotku a ine fotky-->
-<!--TODO LOGO ZAROVNAT pri MOBILE na STRED a PRI PC TROSKA Z LAVA A MENU NA PRAVO-->
-
+<!--TODO LOGO ZAROVNAT pri MOBILE na STRED-->
 <!--TODO Sroll buttom up -->
 <!--TODO Gallery with filer and gallery prewiev and sroll on images popis AKO NA WORDPRESSE-->
-
 <!--TODO zivotopis sticky fotka  -->
 <!--TODO Skill bar v % s animaciou-->
-
 <!--TODO Animacia na každu sekciu -->
-
 <!--TODO kontaktny formular na objednavku -->
-
 <!--TODO Google maps s funkčnostou -->
-
 <!--TODO Odber noviniek-->
-
 <!--TODO Cookies baner -->
-
 <!--TODO Facebook chat-->
-
 <!--TODO 404 PAGE NOT FOUND STYLE-->
-
 <!--TODO Footer s rychlymi odkazmi + logo + social media + copyright-->
-
 <!--TODO GDPR a COOKIES DAT DO RYCHLE ODKAZY NIE HORE V NAV-->
+<!--TODO 404 PAGE NOT FOUND UROBIŤ-->
