--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -473,9 +473,9 @@
 <br>
 <br>
 <!-------------JAVA SCRIPT-------------->
-<script src="js/slider-script.js" type="text/javascript"></script>
-<script src="js/nav-script.js" type="text/javascript"></script>
-<script src="js/dropdown-nav-script.js" type="text/javascript"></script>
+<script src="js/slider.js" type="text/javascript"></script>
+<script src="js/nav.js" type="text/javascript"></script>
+<script src="js/dropdown-nav.js" type="text/javascript"></script>
 </body>
 </html>
 
