--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <title>JP GENERATION</title>
-    <link href="image/asset-8-8.png" rel="icon" type="image/x-icon">
+    <link href="image/logo/asset-8-8.png" rel="icon" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="css/media.css" rel="stylesheet">
@@ -20,7 +20,7 @@
     <div class="nav-complet">
         <div class="log-div">
             <a class="logo-jp" href="index.html">
-                <img alt="JP GENERATION logo" id="logo" src="image/asset-8-8.png">
+                <img alt="JP GENERATION logo" id="logo" src="image/logo/asset-8-8.png">
             </a>
         </div>
         <div class="topnav" id="myTopnav">
@@ -87,39 +87,39 @@
         <div class="text2">My sme digitálna generácia</div>
         <!-----------1.-------->
         <div class="mySlides">
-            <img alt="ENCORE the club negroni cocktail" class="sliderimg" src="image/jp-negroni.webp">
+            <img alt="ENCORE the club negroni cocktail" class="sliderimg" src="image/slider/jp-negroni.webp">
         </div>
         <!-----------2.-------->
         <div class="mySlides">
-            <img alt="Chivas Regal 15yo and cigar" class="sliderimg" src="image/chivaspromo-portfoli.webp">
+            <img alt="Chivas Regal 15yo and cigar" class="sliderimg" src="image/slider/chivaspromo-portfoli.webp">
         </div>
         <!-----------3.-------->
         <div class="mySlides">
-            <img alt="halloween shot cocktail" class="sliderimg" src="image/jp-halloween-portfoli-shot.webp">
+            <img alt="halloween shot cocktail" class="sliderimg" src="image/slider/jp-halloween-portfoli-shot.webp">
         </div>
         <!-----------4.-------->
         <div class="mySlides">
-            <img alt="halloween martini cocktail" class="sliderimg" src="image/halloween-portfoli.webp">
+            <img alt="halloween martini cocktail" class="sliderimg" src="image/slider/halloween-portfoli.webp">
         </div>
         <!-----------5.-------->
         <div class="mySlides">
-            <img alt="G&T Malfy cocktail mennu" class="sliderimg" src="image/jp-menu-portfoli-malfy.webp">
+            <img alt="G&T Malfy cocktail mennu" class="sliderimg" src="image/slider/jp-menu-portfoli-malfy.webp">
         </div>
         <!-----------6.-------->
         <div class="mySlides">
-            <img alt="ENCORE the club cocktail card" class="sliderimg" src="image/jp-graphic.webp">
+            <img alt="ENCORE the club cocktail card" class="sliderimg" src="image/slider/jp-graphic.webp">
         </div>
         <!-----------7.-------->
         <div class="mySlides">
-            <img alt="Lounge bar peoples" class="sliderimg" src="image/jp-people.webp">
+            <img alt="Lounge bar peoples" class="sliderimg" src="image/slider/jp-people.webp">
         </div>
         <!-----------8.-------->
         <div class="mySlides">
-            <img alt="Coktail menu QR code design" class="sliderimg" src="image/jp-qrcode.webp">
+            <img alt="Coktail menu QR code design" class="sliderimg" src="image/slider/jp-qrcode.webp">
         </div>
         <!-----------9.-------->
         <div class="mySlides">
-            <img alt="KVADRAT sushi in lounge bar" class="sliderimg" src="image/jp-shushi.webp">
+            <img alt="KVADRAT sushi in lounge bar" class="sliderimg" src="image/slider/jp-shushi.webp">
         </div>
     </div>
     <br>
@@ -251,23 +251,92 @@
         <span>Menší náhľad ako môže vyzerať aj Váš projekt</span>
     </div>
     <section class="photo-galery">
-        <div class="pro-img-1">
-            <img alt="" src="">
-        </div>
-        <div class="pro-img-2">
-            <img alt="" src="">
-        </div>
-        <div class="pro-img-3">
-            <img alt="" src="">
-        </div>
-        <div class="pro-img-4">
-            <img alt="" src="">
-        </div>
-        <div class="pro-img-5">
-            <img alt="" src="">
-        </div>
-        <div class="pro-img-6">
-            <img alt="" src="">
+        <div class="gallery" id="gallery">
+            <!--1-->
+            <div class="slide blue">
+                <img class="pro-gal" src="image/project/barpromo-portfoli-02.webp" alt=""/>
+            </div>
+            <!--2-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/barpromo-portfoli-04.webp" alt=""/>
+            </div>
+            <!--3-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/barpromo-portfoli-06.webp" alt=""/>
+            </div>
+            <!--4-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/brilia-drink-menu.webp" alt=""/>
+            </div>
+            <!--5-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/coffeein-portfoli-01.webp" alt=""/>
+            </div>
+            <!--6-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/coffein-project-cover.webp" alt=""/>
+            </div>
+            <!--7-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/encore-email-dizajn.webp" alt=""/>
+            </div>
+            <!--8-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/encore-partyalert.webp" alt=""/>
+            </div>
+            <!--9-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/encore-vizitka.webp" alt=""/>
+            </div>
+            <!--10-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/gtnight-portfoli-01.webp" alt=""/>
+            </div>
+            <!-- this content should be cloned -->
+            <!--1-->
+            <div class="slide blue">
+                <img class="pro-gal" src="image/project/gtnight-portfoli-03.webp" alt=""/>
+            </div>
+            <!--2-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/jp-valentin-6.webp" alt=""/>
+            </div>
+            <!--3-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/kavapromo-portfoli-01.webp" alt=""/>
+            </div>
+            <!--4-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/kavapromo-portfoli-04.webp" alt=""/>
+            </div>
+            <!--5-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/napojak-lounge.webp" alt=""/>
+            </div>
+            <!--6-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/summerpromo-portfoli-02.webp" alt=""/>
+            </div>
+            <!--7-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/summerpromo-portfoli-04.webp" alt=""/>
+            </div>
+            <!--8-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/wintermenu2-portfoli-01.webp" alt=""/>
+            </div>
+            <!--9-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/wintermenu-portfoli-02.webp" alt=""/>
+            </div>
+            <!--10-->
+            <div class="slide">
+                <img class="pro-gal" src="image/project/wintermenu-portfoli-05.webp" width="1272"/>
+            </div>
+            <div class="modal">
+                <span class="close">&times;</span>
+                <img class="modalImage" id="img01" />
+            </div>
         </div>
     </section>
 </section>
@@ -343,7 +412,7 @@
         <div class="fot-logo-disc">
             <div class="fot-logo">
                 <a href="#">
-                    <img alt="logo jp generation" src="image/asset-8-8.png">
+                    <img alt="logo jp generation" src="image/logo/asset-8-8.png">
                 </a>
             </div>
             <div class="slog">
@@ -476,6 +545,7 @@
 <script src="js/slider.js" type="text/javascript"></script>
 <script src="js/nav.js" type="text/javascript"></script>
 <script src="js/dropdown-nav.js" type="text/javascript"></script>
+<script src="js/project-gallery.js"></script>
 </body>
 </html>
 
