JP GENERATION - PROJECT GALLERY BUILDING PART 2

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -254,84 +254,84 @@
         <div class="gallery" id="gallery">
             <!--1-->
             <div class="slide blue">
-                <img class="pro-gal" src="image/project/barpromo-portfoli-02.webp" alt=""/>
+                <img class="pro-gal" src="image/project/barpromo-portfoli-02.webp" alt="Cocktail making"/>
             </div>
             <!--2-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/barpromo-portfoli-04.webp" alt=""/>
+                <img class="pro-gal" src="image/project/barpromo-portfoli-04.webp" alt="Hot rose wine"/>
             </div>
             <!--3-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/barpromo-portfoli-06.webp" alt=""/>
+                <img class="pro-gal" src="image/project/barpromo-portfoli-06.webp" alt="Red wine pouring"/>
             </div>
             <!--4-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/brilia-drink-menu.webp" alt=""/>
+                <img class="pro-gal" src="image/project/brilia-drink-menu.webp" alt="Brilia drink menu"/>
             </div>
             <!--5-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/coffeein-portfoli-01.webp" alt=""/>
+                <img class="pro-gal" src="image/project/coffeein-portfoli-01.webp" alt="French press coffee"/>
             </div>
             <!--6-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/coffein-project-cover.webp" alt=""/>
+                <img class="pro-gal" src="image/project/coffein-project-cover.webp" alt="Coffein coffee pack"/>
             </div>
             <!--7-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/encore-email-dizajn.webp" alt=""/>
+                <img class="pro-gal" src="image/project/encore-email-dizajn.webp" alt="Encore the club e-mail design"/>
             </div>
             <!--8-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/encore-partyalert.webp" alt=""/>
+                <img class="pro-gal" src="image/project/encore-partyalert.webp" alt="Encore the club party poster"/>
             </div>
             <!--9-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/encore-vizitka.webp" alt=""/>
+                <img class="pro-gal" src="image/project/encore-vizitka.webp" alt="Encore the club business card"/>
             </div>
             <!--10-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/gtnight-portfoli-01.webp" alt=""/>
+                <img class="pro-gal" src="image/project/gtnight-portfoli-01.webp" alt="G&T Beefeater London Dry"/>
             </div>
             <!-- this content should be cloned -->
             <!--1-->
             <div class="slide blue">
-                <img class="pro-gal" src="image/project/gtnight-portfoli-03.webp" alt=""/>
+                <img class="pro-gal" src="image/project/gtnight-portfoli-03.webp" alt="G&T Malfy Con Arancia"/>
             </div>
             <!--2-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/jp-valentin-6.webp" alt=""/>
+                <img class="pro-gal" src="image/project/jp-valentin-6.webp" alt="Valentines day cocktail"/>
             </div>
             <!--3-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/kavapromo-portfoli-01.webp" alt=""/>
+                <img class="pro-gal" src="image/project/kavapromo-portfoli-01.webp" alt="Coffee grider"/>
             </div>
             <!--4-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/kavapromo-portfoli-04.webp" alt=""/>
+                <img class="pro-gal" src="image/project/kavapromo-portfoli-04.webp" alt="Cappuccino pouring"/>
             </div>
             <!--5-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/napojak-lounge.webp" alt=""/>
+                <img class="pro-gal" src="image/project/napojak-lounge.webp" alt="Encore the club drink menu"/>
             </div>
             <!--6-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/summerpromo-portfoli-02.webp" alt=""/>
+                <img class="pro-gal" src="image/project/summerpromo-portfoli-02.webp" alt="Girl smoking shisha"/>
             </div>
             <!--7-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/summerpromo-portfoli-04.webp" alt=""/>
+                <img class="pro-gal" src="image/project/summerpromo-portfoli-04.webp" alt="Girl eating cake"/>
             </div>
             <!--8-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/wintermenu2-portfoli-01.webp" alt=""/>
+                <img class="pro-gal" src="image/project/wintermenu2-portfoli-01.webp" alt="Winter menu cocktail"/>
             </div>
             <!--9-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/wintermenu-portfoli-02.webp" alt=""/>
+                <img class="pro-gal" src="image/project/wintermenu-portfoli-02.webp" alt="White russian cockatil"/>
             </div>
             <!--10-->
             <div class="slide">
-                <img class="pro-gal" src="image/project/wintermenu-portfoli-05.webp" width="1272"/>
+                <img class="pro-gal" src="image/project/wintermenu-portfoli-05.webp" alt="Hot red wine"/>
             </div>
             <div class="modal">
                 <span class="close">&times;</span>
@@ -485,7 +485,7 @@
         <div class="soc-an">
             <ul>
                 <li>
-                    <a href="https://www.facebook.com/jaro.potocny">
+                    <a href="https://www.facebook.com/jaro.potocny" target="_blank">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -494,7 +494,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/jaro_potocny/">
+                    <a href="https://www.instagram.com/jaro_potocny/" target="_blank">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -503,7 +503,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.youtube.com/@jpgeneration/featured">
+                    <a href="https://www.youtube.com/@jpgeneration/featured" target="_blank">
                         <span></span>
                         <span></span>
                         <span></span>
