--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -356,30 +356,79 @@
                 naučiť a ak si myslíte nie znamená to len jedno…
         </div>
         <section class="skill-list">
-            <div class="name1">
-                <div class="type"><span>Foto produkcia</span></div>
-                <div class="percent"><span>99%</span></div>
-                <div class="turquise-bar"></div>
-            </div>
-            <div class="name2">
-                <div class="type"><span>Graficky diazjn</span></div>
-                <div class="percent"><span>99%</span></div>
-                <div class="turquise-bar"></div>
-            </div>
-            <div class="name3">
-                <div class="type"><span>WordPress web</span></div>
-                <div class="percent"><span>92%</span></div>
-                <div class="turquise-bar"></div>
-            </div>
-            <div class="name4">
-                <div class="type"><span>Video produkcia</span></div>
-                <div class="percent"><span>89%</span></div>
-                <div class="turquise-bar"></div>
-            </div>
-            <div class="name5">
-                <div class="type"><span>Správa domeny a hostingu</span></div>
-                <div class="percent"><span>93%</span></div>
-                <div class="turquise-bar"></div>
+            <div class="container-skill">
+                <!----------------1---------------->
+                <div class="progress-bar" data-percentage="90">
+                    <div class="progress-number-mark">
+                        <div class="percent">90%</div>
+                    </div>
+                    <div class="progress-title-holder">
+                        <div class="progress-title">Foto produkcia</div>
+                    </div>
+                    <div class="progress-content-outter">
+                        <div class="progress-content"></div>
+                    </div>
+                </div>
+                <!----------------2---------------->
+                <div class="progress-bar" data-percentage="85">
+                    <div class="progress-number-mark">
+                        <div class="percent">85%</div>
+                    </div>
+                    <div class="progress-title-holder">
+                        <div class="progress-title">Video produkcia</div>
+                    </div>
+                    <div class="progress-content-outter">
+                        <div class="progress-content"></div>
+                    </div>
+                </div>
+                <!----------------3---------------->
+                <div class="progress-bar" data-percentage="95">
+                    <div class="progress-number-mark">
+                        <div class="percent">95%</div>
+                    </div>
+                    <div class="progress-title-holder">
+                        <div class="progress-title">Graficky dizajn</div>
+                    </div>
+                    <div class="progress-content-outter">
+                        <div class="progress-content"></div>
+                    </div>
+                </div>
+                <!----------------4---------------->
+                <div class="progress-bar" data-percentage="70">
+                    <div class="progress-number-mark">
+                        <div class="percent">70%</div>
+                    </div>
+                    <div class="progress-title-holder">
+                        <div class="progress-title">WordPress web</div>
+                    </div>
+                    <div class="progress-content-outter">
+                        <div class="progress-content"></div>
+                    </div>
+                </div>
+                <!----------------5---------------->
+                <div class="progress-bar" data-percentage="60">
+                    <div class="progress-number-mark">
+                        <div class="percent">60%</div>
+                    </div>
+                    <div class="progress-title-holder">
+                        <div class="progress-title">Správa domeny a hostingu</div>
+                    </div>
+                    <div class="progress-content-outter">
+                        <div class="progress-content"></div>
+                    </div>
+                </div>
+                <!----------------6---------------->
+                <div class="progress-bar" data-percentage="50">
+                    <div class="progress-number-mark">
+                        <div class="percent">50%</div>
+                    </div>
+                    <div class="progress-title-holder">
+                        <div class="progress-title">Digitálna stratégia</div>
+                    </div>
+                    <div class="progress-content-outter">
+                        <div class="progress-content"></div>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
@@ -545,7 +594,8 @@
 <script src="js/slider.js" type="text/javascript"></script>
 <script src="js/nav.js" type="text/javascript"></script>
 <script src="js/dropdown-nav.js" type="text/javascript"></script>
-<script src="js/project-gallery.js"></script>
+<script src="js/project-gallery.js" type="text/javascript"></script>
+<script src="js/skill-bar.js" type="text/javascript"></script>
 </body>
 </html>
 
