JP GENERATION - SKILL LIST ENDING

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -343,8 +343,8 @@
 <br>
 <br>
 <!-------------SKILL LIST-------------->
+<section class="skill-list">
 <section class="abilites">
-    <div class="skills">
         <header class="headline-con">
             <div class="con-main">
                 <div class="spacer"></div>
@@ -431,10 +431,12 @@
                 </div>
             </div>
         </section>
+</section>
+<section class="abbilites-img">
+    <div class="skill-img">
+        <img class="gt" src="image/skill/jp-skill-cover.webp" alt="Macbook programing something"/>
     </div>
-    <div class="photo-ai">
-        <img alt="" src="">
-    </div>
+</section>
 </section>
 <br>
 <br>
