JP GENERATION - BIG MIND BUILDING

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -441,15 +441,14 @@
 <br>
 <br>
 <!-------------BIG MIND-------------->
-<section class="mind">
+<section class="mind-sec">
     <div class="backgr-img">
-        <div class="container">
-            <div>
-                <h2>Máte na mysli niečo veľké?</h2>
-            </div>
-            <div>
-                <button>
-                    <a href="#">Poďme na to!</a>
+        <div class="overlay">
+            <img class="overlay-img" src="image/big-mind/jp-big-mind.webp" alt="Overlay Image">
+            <div class="overlay-content">
+                <h2 class="mind">Máte na mysli niečo veľké?</h2>
+                <button class="come-on">
+                    <a class="come" href="#">Poďme na to!</a>
                 </button>
             </div>
         </div>
@@ -583,6 +582,7 @@
             </ul>
         </div>
     </section>
+
     <!-------------COPYRIGHT-------------->
     <section class="copy-write">
         <div>
