JP GENERATION - FOOTER BUILDING

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -476,15 +476,19 @@
             <h4>Služby</h4>
             <div>
                 <div>
+                    <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Foto produkcia</a>
                 </div>
                 <div>
+                    <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Graficky dizajn</a>
                 </div>
                 <div>
+                    <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Wordpres web</a>
                 </div>
                 <div>
+                    <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Cenník</a>
                 </div>
             </div>
@@ -493,15 +497,19 @@
             <h4>Rýchle odkazy</h4>
             <div>
                 <div>
+                    <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Kto vlastne sme</a>
                 </div>
                 <div>
+                    <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Portfólio</a>
                 </div>
                 <div>
+                    <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Zásady ochrany osobných údajov</a>
                 </div>
                 <div>
+                    <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Zásady používania súborov cookie</a>
                 </div>
             </div>
