JP GENERATION - FOOTER BUILDING COMPLEAT

--- a/plne-responzivny-web/index.html
+++ b/plne-responzivny-web/index.html
@@ -462,80 +462,73 @@
         <div class="fot-logo-disc">
             <div class="fot-logo">
                 <a href="#">
-                    <img alt="logo jp generation" src="image/logo/asset-8-8.png">
+                    <img class="logo-foot" alt="logo jp generation" src="image/logo/asset-8-8.png">
                 </a>
             </div>
             <div class="slog">
                 <p>My sme digitálna generácia</p>
             </div>
-            <div class="line">
-
-            </div>
+            <div class="line-con1"></div>
         </div>
         <div class="fot-services">
-            <h4>Služby</h4>
+            <h4 class="fot-h">Služby</h4>
             <div>
-                <div>
+                <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Foto produkcia</a>
                 </div>
-                <div>
+                <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Graficky dizajn</a>
                 </div>
-                <div>
+                <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Wordpres web</a>
                 </div>
-                <div>
+                <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Cenník</a>
                 </div>
             </div>
         </div>
         <div class="fot-speed">
-            <h4>Rýchle odkazy</h4>
+            <h4 class="fot-h">Rýchle odkazy</h4>
             <div>
-                <div>
+                <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Kto vlastne sme</a>
                 </div>
-                <div>
+                <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Portfólio</a>
                 </div>
-                <div>
+                <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Zásady ochrany osobných údajov</a>
                 </div>
-                <div>
+                <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
                     <a href="">Zásady používania súborov cookie</a>
                 </div>
             </div>
         </div>
         <div class="fot-conta">
-            <h4>Kontakt</h4>
+            <h4 class="fot-h">Kontakt</h4>
             <div>
-                <div>
+                <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-map-marker"></i>
                     <a href="#">Niekde na platnéte Zem</a>
                 </div>
-                <div>
+                <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-phone"></i>
                     <a href="#">+421 907 112 358</a>
                 </div>
-                <div>
+                <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
                     <a href="#">info@jpgeneration.sk</a>
                 </div>
 
             </div>
-        </div>
-    </section>
-    <section class="spacer">
-        <div class="line">
-            <!--PRITAĎ ČIARU !!!-->
         </div>
     </section>
     <!-------------SOCIAL ICON------------->
@@ -593,7 +586,7 @@
 
     <!-------------COPYRIGHT-------------->
     <section class="copy-write">
-        <div>
+        <div class="copy-box">
             <p>Copyright © 2023. All rights reserved.</p>
         </div>
     </section>
